zarf/deployments/devnet/participant2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dec-party-manager-2
  namespace: catalyst-canton
  labels:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-2
    app.kubernetes.io/component: attestor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dec-party-manager
      app.kubernetes.io/instance: participant-2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dec-party-manager
        app.kubernetes.io/instance: participant-2
        app.kubernetes.io/component: attestor
    spec:
      containers:
        - name: dec-party-manager
          image: public.ecr.aws/dlc-link/canton-decparty-manager:v0.0.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: noise
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: keys
              mountPath: /data/keys
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: dec-party-manager-2-config
        - name: keys
          secret:
            secretName: dec-party-manager-2-keys
        - name: data
          persistentVolumeClaim:
            claimName: dec-party-manager-2-data
---
apiVersion: v1
kind: Service
metadata:
  name: dec-party-manager-2
  namespace: catalyst-canton
  labels:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-2
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: noise
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dec-party-manager-2-ingress
  namespace: catalyst-canton
spec:
  ingressClassName: traefik
  rules:
    - host: dec-party-manager-2.dev.canton.ibtc.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dec-party-manager-2
                port:
                  number: 80
